Fixed table. Adjusted a ton of spacing.

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -19,14 +19,12 @@ margin-left: 47px;
 #mega_image {
 margin-bottom: 30px;
 overflow: hidden;
-font-size: 11px;
-font-style: italic;
-text-align: center;
 background-color: #F4F4F4;
 border: 1px solid #DDD;
 padding: 20px;
 padding-bottom: 15px;
-display: block;
+/*display: block;*/
+
 }
 
 #term {
@@ -38,7 +36,21 @@ display: block;
   padding-left: 10px;
 }
 
+#mid-content {
+  margin-top: 20px;
+} 
 
+#top_tracks {
+  width: 200px;
+  position: absolute;
+  margin-left: 570px;
+ 
+}
+
+.recent_search {
+  float: bottom;
+  padding: 10px;
+}
 
 
 
